<?xml version="1.0"?>
<package format="2">
  <name>calibration_publisher_aai</name>
  <version>1.12.0</version>
  <description>
    Autoware instrinsic and extrinsic calibration publisher.
    Although Autoware dependents are removed.
  </description>
  <maintainer email="todo@TBD.com">Shuhei-YOSHIDA</maintainer>
  <license>Apache</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>image_transport</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>tf2</depend>
</package>
